<?php

require_once __DIR__ . '/../Modeles/modele_utilisateur.php';
require_once __DIR__ . '/../Modeles/modele_borne.php';
require_once __DIR__ . '/../Modeles/modele_mesure.php';
require_once __DIR__ . '/../Modeles/journalisation.php';
require_once __DIR__ . '/../Vues/VueClient.php';
require_once __DIR__ . '/../Modeles/config.inc.php';

// Identifiants admin fixes
define('ADMIN_LOGIN', 'admin');
define('ADMIN_MDP', 'admin1234');

class Controleur {

    private $modele;
    private $journalisation;

    public function __construct() {
        $this->modele = new Modele();
        $this->journalisation = new Journalisation();
    }

    public function Connexion() {
        if ($_SERVER['REQUEST_METHOD'] === 'POST') {
            $id = $_POST['identifiant'] ?? '';
            $pass = $_POST['password'] ?? '';

            $user = $this->modele->LoginVerify($id, $pass);

            if ($user) {
                $_SESSION['user'] = $id;
                $this->journalisation->LogConnexion($id, date('Y-m-d H:i:s'));

                if ($id === 'admin') {
                    $_SESSION['role'] = 'admin';
                    header('Location: ' . SERVEUR_URL . '/index.php?action=GestionUtilisateurs');
                } else {
                    $_SESSION['role'] = 'utilisateur';
                    header('Location: ' . SERVEUR_URL . '/index.php?action=ChoixParam');
                }
                //exit();
            } else {
                if (!$this->modele->UtilisateurExiste($id)) {
                    header('Location: ' . SERVEUR_URL . '/index.php?action=CreerCompte&identifiant=' . urlencode($id));
                    exit();
                }
                $erreur = "Mot de passe incorrect.";
                include __DIR__ . '/../Vues/login.php';
            }
        } else {
            include __DIR__ . '/../Vues/login.php';
        }
    }

    public function GestionUtilisateurs() {
// Seul l'admin peut accéder
        if (!isset($_SESSION['role']) || $_SESSION['role'] !== 'admin') {
            header('Location: ' . SERVEUR_URL . '/index.php?action=Connexion');
            exit();
        }
        $listeUtilisateurs = $this->modele->RecupererUtilisateurs();
        include __DIR__ . '/../Vues/gestion_utilisateurs.php';
    }

    public function SupprimerUtilisateur() {
        if (!isset($_SESSION['role']) || $_SESSION['role'] !== 'admin') {
            header('Location: ' . SERVEUR_URL . '/index.php?action=Connexion');
            exit();
        }
        $id = $_GET['id'] ?? null;
        if ($id)
            $this->modele->SupprimerUtilisateur($id);
        header('Location: ' . SERVEUR_URL . '/index.php?action=GestionUtilisateurs');
        exit();
    }

    public function SuspendreUtilisateur() {
        if (!isset($_SESSION['role']) || $_SESSION['role'] !== 'admin') {
            header('Location: ' . SERVEUR_URL . '/index.php?action=Connexion');
            exit();
        }
        $id = $_GET['id'] ?? null;
        if ($id)
            $this->modele->ChangerEtatUtilisateur($id, 0);
        header('Location: ' . SERVEUR_URL . '/index.php?action=GestionUtilisateurs');
        exit();
    }

    public function ReactiverUtilisateur() {
        if (!isset($_SESSION['role']) || $_SESSION['role'] !== 'admin') {
            header('Location: ' . SERVEUR_URL . '/index.php?action=Connexion');
            exit();
        }
        $id = $_GET['id'] ?? null;
        if ($id)
            $this->modele->ChangerEtatUtilisateur($id, 1);
        header('Location: ' . SERVEUR_URL . '/index.php?action=GestionUtilisateurs');
        exit();
    }

    public function ModifierUtilisateur() {
        if (!isset($_SESSION['role']) || $_SESSION['role'] !== 'admin') {
            header('Location: ' . SERVEUR_URL . '/index.php?action=Connexion');
            exit();
        }
        if ($_SERVER['REQUEST_METHOD'] === 'POST') {
            $id = $_POST['id'] ?? null;
            $login = $_POST['login'] ?? '';
            $mdp = $_POST['mdp'] ?? '';
            if ($id)
                $this->modele->ModifierUtilisateur($id, $login, $mdp);
            header('Location: ' . SERVEUR_URL . '/index.php?action=GestionUtilisateurs');
            exit();
        }
        $id = $_GET['id'] ?? null;
        $utilisateur = $id ? $this->modele->RecupererUtilisateurParId($id) : null;
        include __DIR__ . '/../Vues/modifier_utilisateur.php';
    }

    public function CreerCompte() {
        $identifiant = $_GET['identifiant'] ?? '';
        if ($_SERVER['REQUEST_METHOD'] === 'POST') {
            $login = $_POST['identifiant'] ?? '';
            $mdp = $_POST['password'] ?? '';
            $mdp_confirm = $_POST['password_confirm'] ?? '';
            if ($mdp !== $mdp_confirm) {
                $erreur = "Les mots de passe ne correspondent pas.";
                include __DIR__ . '/../Vues/creer_compte.php';
                return;
            }
            if ($this->modele->UtilisateurExiste($login)) {
                $erreur = "Cet identifiant existe déjà.";
                include __DIR__ . '/../Vues/creer_compte.php';
                return;
            }
            $this->modele->CreerUtilisateur($login, $mdp);
            $succes = "Compte créé ! Vous pouvez vous connecter.";
            include __DIR__ . '/../Vues/login.php';
        } else {
            include __DIR__ . '/../Vues/creer_compte.php';
        }
    }

    public function ChoixParam() {
        if (!isset($_SESSION['user'])) {
            header('Location: ' . SERVEUR_URL . '/index.php?action=Connexion');
            exit();
        }
        $listeBornes = $this->modele->RecupererListeBorne();
        include __DIR__ . '/../Vues/choix_borne.php';
    }

    public function AjouterBorne() {
        if (!isset($_SESSION['role']) || $_SESSION['role'] !== 'admin') {
            header('Location: ' . SERVEUR_URL . '/index.php?action=Connexion');
            exit();
        }

        if ($_SERVER['REQUEST_METHOD'] === 'POST') {
            $nom = $_POST['nom_borne'] ?? '';
            $emplacement = $_POST['emplacement'] ?? '';
            $puissance = $_POST['puissance'] ?? 0;
            $ip = $_POST['ip_usine'] ?? '';

            $this->modele->AjouterBorne($nom, $emplacement, $puissance, $ip);
            $succes = "Borne \"$nom\" ajoutée avec succès !";
            include __DIR__ . '/../Vues/ajouter_borne.php';
        } else {
            include __DIR__ . '/../Vues/ajouter_borne.php';
        }
    }

    public function SupprimerBorne() {
        if (!isset($_SESSION['role']) || $_SESSION['role'] !== 'admin') {
            header('Location: ' . SERVEUR_URL . '/index.php?action=Connexion');
            exit();
        }
        $id = isset($_GET['id']) ? (int) $_GET['id'] : null;
        if ($id) {
            $this->modele->SupprimerBorne($id);
        }
        header('Location: ' . SERVEUR_URL . '/index.php?action=ChoixParam');
        exit();
    }

    public function EnregistreGraph() {
        if (!isset($_SESSION['user'])) {
            header('Location: ' . SERVEUR_URL . '/index.php?action=Connexion');
            exit();
        }
        $id_borne = $_GET['id'] ?? 1;
        $plage = $_GET['plage'] ?? 'jour';
        $date_debut = $_GET['date_debut'] ?? date('Y-m-d', strtotime('monday this week'));
        $date_fin = $_GET['date_fin'] ?? date('Y-m-d', strtotime('sunday this week'));
        $mois = isset($_GET['mois']) ? (int) $_GET['mois'] : (int) date('m');

        $mesures = $this->modele->GetMesuresParBorne($id_borne, $plage, $date_debut, $date_fin, $mois);
        $derniereMesure = $this->modele->GetDerniereMesure($id_borne);
        $nomBorne = $this->modele->GetNomBorne($id_borne);
        //$consommationTotale = $this->modele->GetConsommationTotale($id_borne, $plage, $date_debut,$date_fin,$mois);
        include __DIR__ . '/../Vues/graphique.php';
    }

    public function Historique() {
        if (!isset($_SESSION['user'])) {
            header('Location: ' . SERVEUR_URL . '/index.php?action=Connexion');
            exit();
        }
        $id_borne = $_GET['id'] ?? 1;
        $nomBorne = $this->modele->GetNomBorne($id_borne);
        $mesuresHistorique = $this->modele->GetHistorique($id_borne);
        include __DIR__ . '/../Vues/historique.php';
    }

    public function Deconnexion() {
        session_destroy();
        header('Location: ' . SERVEUR_URL . '/index.php?action=Connexion');
        exit();
    }
}
